Adicionado salvamento de especialidades da tabela